cmake_minimum_required(VERSION 3.17)
set(ARCH "x86_64")
set(CMAKE_CXX_STANDARD 14)
find_package(LLVM REQUIRED CONFIG)
list(APPEND CMAKE_MODULE_PATH "${LLVM_CMAKE_DIR}")
include(AddLLVM)
add_definitions(${LLVM_DEFINITIONS})
include_directories(${LLVM_INCLUDE_DIRS})
include_directories(include/)
add_subdirectory(Obfuscation)
